# python_boilerplate

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  qodana.yaml  requirements-all.txt  requirements-dev.txt  requirements-full.txt
.github/workflows/: ci-meta.yml  ci.yml  lockfile-check.yml  qodana_code_quality.yml
makefiles/: ansible.mk
